# webflow-python

./: pyproject.toml
src/webflow/types/: collection_item_field_data.py
